# top10anything

./: .env.example  .gitignore  PROJECT_TASKS.md  README.md  Top10-Analytics-Project-README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
data/Initial/: Top10Anything_workbook.twb.example  initial.hyper.example
docs/: SEARCH_IMPLEMENTATION.md  USAGE.md  about_project_tableau_hackathon.md
examples/: create_agent_ranking_hyper.py  create_hyper.py  update_tableau_cloud.py
models/: README.md  ranking.py
src/agent/: ranking_agent.py  search.py
src/models/: ranking.py
src/pipeline/: __init__.py  hyper.py  tableau.py  tableau_cloud.py
src/web/: __init__.py  app.py  run.py
src/web/routes/: api.py
src/web/services/: ranking_service.py
src/web/static/: index.html
